--- a/views/admin_login.hbs
+++ b/views/admin_login.hbs
@@ -1,13 +1,13 @@
 <div class="sidenav">
    <div class="login-main-text">
-      <h2>Student Login Page</h2>
+      <h2>Admin Login Page</h2>
       <p>Login from here to access.</p>
    </div>
 </div>
 <div class="main">
    <div class="col-md-6 col-sm-12">
       <div class="login-form">
-         <form method="post" action="/student/login/">
+         <form method="post" action="/admin/login/">
             <div class="form-group">
                <label>Email</label>
                <input type="email" class="form-control" placeholder="Email" name="email">
@@ -18,8 +18,8 @@
             </div>
             <button type="submit" class="btn btn-black btn-block" name="button" value=""><span
                   style="color: #f7f7f7;">Login</span></button>
-            <a class="btn btn-black btn-block" href="/student/auth/google" role="button">
-               <span style="color: #f7f7f7;"> Sign In with Google</span></a>
+            {{!-- <a class="btn btn-black btn-block" href="/student/auth/google" role="button">
+               <span style="color: #f7f7f7;"> Sign In with Google</span></a> --}}
          </form>
 
 
