--- a/views/admin_signup.hbs
+++ b/views/admin_signup.hbs
@@ -1,13 +1,13 @@
 <div class="sidenav">
   <div class="login-main-text">
-    <h2>Student Registration Page</h2>
+    <h2>Admin Registration Page</h2>
     <p>Register from here to access.</p>
   </div>
 </div>
 <div class="main">
   <div class="col-md-6 col-sm-12">
     <div class="login-form">
-      <form method="POST" action="/student/signup">
+      <form method="POST" action="/admin/signup">
         <div class="form-group">
           <label>User Name</label>
           <input type="text" class="form-control" placeholder="User Name" name="user_name">
@@ -23,8 +23,8 @@
 
         <button type="submit" style="color:#f7f7f7;" class="btn btn-black btn-lg btn-block"
           name="button">Register</button>
-        <a class="btn btn-black btn-block" href="/student/auth/google" role="button">
-          <span style="color: #f7f7f7;"> Sign Up with Google</span></a>
+        {{!-- <a class="btn btn-black btn-block" href="/student/auth/google" role="button"> --}}
+          {{!-- <span style="color: #f7f7f7;"> Sign Up with Google</span></a> --}}
       </form>
     </div>
   </div>
