--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,82 +1,27 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-fixed-top">
-    <a class="navbar-brand" href="#" style="color:#f7f7f7"><b>SMS</b></a>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-fixed-top " style="position:static; top: 5px">
+    <h3 class="navbar-brand" href="#" style="color:#f7f7f7"><b>SMS</b></h3>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active " href="#" style="color:#f7f7f7">Home <span
+            <a class="nav-item nav-link active " href="#" style="color:#f7f7f7"> <i class="fa fa-home"></i> Home <span
                     class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#" style="color:#f7f7f7">About Us</a>
-            <a class="nav-item nav-link font_color" href="#" style="color:#f7f7f7">Pricing</a>
+            <a class="nav-item nav-link" href="#" style="color:#f7f7f7"> <i class="fa fa-users"></i> About Us</a>
+            <a class="nav-item nav-link font_color" href="#" style="color:#f7f7f7">Vision</a>
         </div>
     </div>
-
-    <!---<div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="user/login" style="color:#f7f7f7">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="student/Signup" style="color:#f7f7f7">Register</a>
-            </li>
-        </ul>
-    </div>-->
-
+    <a class="nav-item nav-link font_color" href="/adminlogin" style="right: auto;color:#f7f7f7"><i
+            class="fa fa-user"></i> Admin Login</a>
+    <a class="nav-item nav-link font_color" href="/admission-inq" style="right: auto;color:#f7f7f7"><i
+            class="fa fa-user"></i> Admission Inq Form</a>
 </nav>
 
 <br>
 
 
 <!---EVENT DETAILS-->
-<div class="container">
-
-    <div class="row">
-        <div class="col-sm-4 clrclass">
-
-            <div class="card text-center jumbotron">
-
-
-
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <h3>-- Event --</h3>
-                    </h5>
-                    <p class="card-text">Event Date (25/5/2020)</p>
-                    <p class="card-text">Event Details</p>
-
-                </div>
-
-
-
-            </div>
-        </div>
-
-
-        <div class="col-sm-8 clrclass">
-            <div class="card text-center jumbotron">
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <h3>-- ANNOUNCEMENT --</h3>
-                    </h5>
-                    <p class="card-text">Announcement Date (25/5/2020)</p>
-                    <p class="card-text">Announcement Details</p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-</div>
-</div>
-
-
-
-
-
-
-
 
 <div class="container">
 
@@ -90,10 +35,12 @@
                             <!-- <h5 class="card-title">LOGIN</h5>-->
                             <div class="row">
                                 <div class="col-sm-6 clrclass">
-                                    <a href="teacher/login" class="btn btn-dark btn-lg btn-block">Teacher Login</a>
+                                    <a href="teacher/login" class="btn btn-dark btn-lg btn-block"><i
+                                            class="fa fa-sign-in"></i> Teacher Login</a>
                                 </div>
                                 <div class="col-sm-6 clrclass">
-                                    <a href="student/login" class="btn btn-dark btn-lg btn-block">Student Login
+                                    <a href="student/login" class="btn btn-dark btn-lg btn-block"><i
+                                            class="fa fa-sign-in"></i> Student Login
                                     </a>
                                 </div>
 
@@ -112,11 +59,13 @@
                             <!--- <h5 class="card-title">SignUp</h5>-->
                             <div class="row">
                                 <div class="col-sm-6 clrclass">
-                                    <a href="teacher/signup" class="btn btn-dark btn-lg btn-block">Teacher SignUp
+                                    <a href="teacher/signup" class="btn btn-dark btn-lg btn-block"><i
+                                            class="fa fa-user-plus"></i> Teacher SignUp
                                     </a>
                                 </div>
                                 <div class="col-sm-6 clrclass">
-                                    <a href="student/signup" class="btn btn-dark btn-lg btn-block">Student
+                                    <a href="student/signup" class="btn btn-dark btn-lg btn-block"><i
+                                            class="fa fa-user-plus"></i> Student
                                         SignUp</a>
                                 </div>
 
@@ -141,41 +90,162 @@
     </div><br>
 
 </div>
+<div class="container">
+
+
+    <div class="row">
+        <div class="col-sm-12 clrclass">
+
+            <div class="card text-center jumbotron">
+
+<h5 class="card-title">
+    <h3><i class="fa fa-bullhorn"></i> ANNOUNCEMENT </h3>
+</h5>
+
+                <div class="card-body" style=" overflow-y: scroll;scrollbar-width: thin; height: 300px;">
+                    
+                    
+                    
+                    <table class="table table-striped" id="myTable">
+                        <thead>
+                            <tr>
+                                <th>Announcement Title</th>
+                                <th>Announcement Note</th>
+                                <th>Time</th>
+
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            {{#each list2}}
+                            <tr>
+                                <td>{{this.title}}</td>
+                                <td>{{this.note}}</td>
+                                <td>{{this.time}}</td>
 
 
 
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
 
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container" style="color:#f7f7f7">
-            <div class="row container">
-                <div class="col-sm-5 clrclass">
-                    <h4 style="font-size: medium; font-family:sans-serif;">Address : </h4>
-
-                    <h6 style="font-size: small; font-family:monospace;">
-                        RB-20 Indus Town, Indore, Madhya Pradesh(M.P)
-                    </h6>
-                    </div>
-
-
-
-                <div class="col-sm-3 ">
-                    <h4 style="font-size: medium; font-family:sans-serif;">Contact : </h4>
-                    <ul style="font-size: small; font-family:monospace;">
-                        <li>123456789</li>
-                        <li>123456789</li>
-                        <li>123456789</li>
-                    </ul>
 
                 </div>
-                <div class="col-sm-4 clrclass">
-                    <h4 style="font-size: medium; font-family:sans-serif;">Mail_id : </h4>
-                    <ul style="font-size: small; font-family:monospace;">
-                        <li>hemant@123gmail.com</li>
-                        <li>shivam@gmail.com</li>
-                        <li>Saharsh@gmail.com</li>
-                    </ul>
 
+
+
+            </div>
+        </div>
+
+
+        <div class="col-sm-12 clrclass">
+            <div class="card text-center jumbotron">
+                <h5 class="card-title">
+    <h3><i class="fa fa-bullhorn"></i> Time - Table </h3>
+</h5>
+                <div class="card-body" style=" overflow-y: scroll;scrollbar-width: thin; height: 300px;">
+                    
+                    
+                    
+                    <table class="table table-striped" id="myTable">
+                        <thead>
+                            <tr>
+                                <th>Class</th>
+                                <th>Day</th>
+                                <th>Session 1 </th>
+                                <th>Session 1' teacher name </th>
+                                <th>break</th>
+                                <th>Session 2 </th>
+                                <th>Session 2' teacher name </th>
+                               
+
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            {{#each list1}}
+                            <tr>
+                                <td>{{this.class}}</td>
+                                <td>{{this.day}}</td>
+                                <td>{{this.session1}}&nbsp;<b>9 to 11</b></td>
+                                <td>{{this.teacher1}}</td>
+                                <td><b>11 to 12</b></td>
+                                <td>{{this.session2}}&nbsp;<b>12 to 2</b></td>
+                                <td>{{this.teacher2}}</td>
+
+
+                                
+                            </tr>
+
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
-    </nav>
+
+    </div>
+
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container" style="color:#f7f7f7">
+        <div class="row container">
+            <div class="col-sm-4 clrclass">
+                <h4 style="font-size: medium; font-family:sans-serif;"> <i class="fa fa-address-card"></i> Address </h4>
+
+                <h6 style="font-size: small; font-family:monospace;">
+                    RB-20 Indus Town, Indore, Madhya Pradesh(M.P)
+                </h6>
+            </div>
+
+
+
+            <div class="col-sm-4 ">
+                <h4 style="font-size: medium; font-family:sans-serif;"> <i class="fa fa-phone"></i> Contact </h4>
+                <ul style="font-size: small; font-family:monospace;">
+                    <li>123456789</li>
+                    <li>123456789</li>
+                    <li>123456789</li>
+                </ul>
+
+            </div>
+            <div class="col-sm-4 clrclass">
+                <h4 style="font-size: medium; font-family:sans-serif;"> <i class="fa fa-envelope"></i> Mail_id </h4>
+                <ul style="font-size: small; font-family:monospace;">
+                    <li>hemant@123gmail.com</li>
+                    <li>shivam@gmail.com</li>
+                    <li>Saharsh@gmail.com</li>
+                </ul>
+
+            </div>
+
+
+            <button class="open-button" onclick="openForm()">Help Desk</button>
+            <div class="chat-popup" id="myForm">
+                <form class="form-container">
+                    <div class="message__area"></div>
+                    <textarea id="textarea" placeholder="Click Enter To Send Text..." name="msg" required></textarea>
+                    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+                </form>
+            </div>
+
+
+        </div>
+    </div>
+</nav>
