--- a/views/stu_dash.hbs
+++ b/views/stu_dash.hbs
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1">Welcome {{name}} !</span>
+  {{#each  dashboard_profile_data}}
+  <span class="navbar-brand mb-0 h1">Welcome {{this.name}} !</span>
+  {{/each}}
+  <a href="/logout" class="btn btn-sm btn-dark">LogOut</a>
 </nav>
 <br>
 
@@ -20,15 +23,16 @@
           <div class="card-body">
 
             <h5 class="card-title">--Profile--</h5><br>
-            <p class="card-text"><b>Name:</b> {{name}}</p>
-
-            <p class="card-text"><b>Email:</b> {{email}}</p>
-            <p class="card-text"> <b>Class:</b> {{class}}</p>
-            <p class="card-text"><b>Roll_No:</b> {{roll_no}}</p>
-            <p class="card-text"> <b>Adhar_No:</b> {{adhar_no}}</p>
-            <p class="card-text"><b>Address:</b> {{address}}</p>
-            <p class="card-text"><b>Mobile_Number:</b> {{ mobile_number}}</p>
-            <p class="card-text"><b>Gender:</b> {{gender}}</p>
+            {{#each  dashboard_profile_data}}
+            <p class="card-text"><b>Name:</b> {{this.name}}</p>
+            <p class="card-text"><b>Email:</b> {{this.email}}</p>
+            <p class="card-text"> <b>Class:</b> {{this.class}}</p>
+            <p class="card-text"><b>Roll_No:</b> {{this.roll_no}}</p>
+            <p class="card-text"> <b>Adhar_No:</b> {{this.adhar_no}}</p>
+            <p class="card-text"><b>Address:</b> {{this.address}}</p>
+            <p class="card-text"><b>Mobile_Number:</b> {{ this.mobile_number}}</p>
+            <p class="card-text"><b>Gender:</b> {{this.gender}}</p>
+            {{/each}}
             <br>
             <a href="/dshbrd/edit/{{id}}" class="btn btn-dark btn-sm btn-block">Edit</a>
 
@@ -184,93 +188,129 @@
 
       <div class="col-sm-7 clrclass ">
 
-        <div class="card jumbotron" style="width: 18rem;  overflow-y: scroll;scrollbar-width: thin; height: 383px;">
+        <div class="card jumbotron" style="width: 18rem; overflow-y: scroll;scrollbar-width: thin; height: 590px;">
           <div class="card-body">
-            <h5 class="card-title">--ATTENDENCE--</h5><br>
-            <p class="card-text"><b>weekly:</b> {{name}}</p>
-            <p class="card-text"><b>Monthly:</b> {{email}}</p>
-            <p class="card-text"> <b>Total:</b> {{class}}</p><br>
-            <h5 class="card-title">--Class Rank--</h5>
-            <p class="card-text"><b>Rank:</b> {{name}}</p>
+            <h5 class="card-title text-center">--Class Rank--</h5>
+            <p class="card-text text-center"><b>Rank:</b> <i>5th in class</i></p>
             <br>
-            <h5 class="card-title">-- Remark--</h5>
-            <p class="card-text"><b>Remark:</b> {{name}}</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-
-
-
-
-
-
-    <!--- TICKET STATUS-->
-
-
-    <div class="row">
-      <div class="col-sm-5 clrclass ">
-        <div class="card jumbotron" style="width: 18rem; height:11rem;">
-          <h5 class="card-title">--Ticket Status--</h5><br>
-          <button type="button" class="btn btn-dark" data-toggle="modal" name="button" value="check_status" data-target="#exampleModalCenter">Check
-            Status</button>
-          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLongTitle">Ticket Status</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body" style=" overflow-y: scroll;scrollbar-width: thin; height: 300px;">
-                  <table class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th scope="col">Ticket_Id</th>
-                        <th scope="col">Title</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Action</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {{#each tickets}}
-                      <tr>
-                        <th scope="row">{{this._id}}</th>
-                        <td>{{this.title}}</td>
-                        {{#if this.status}}
-                         <td>Resolved</td>
-                         {{else}}
+            <h5 class="card-title text-center">-- Remark--</h5>
+            <p class="card-text text-center"><b>Remark:</b> <i>Average he can do better</i> </p>
+            <h5 class="card-title text-center">-- Forum--</h5>
+            <a href="/discussion" class="btn btn-dark card-text text-center">Discussion Forum</a>
+            <h5 class="card-title text-center">--CheckStatus--</h5>
+            <button type="button" class="btn btn-dark card-text text-center" data-toggle="modal" name="button" value="check_status"
+              data-target="#exampleModalCenter">CheckStatus</button>
+            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+              aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title text-center" id="exampleModalLongTitle">Ticket Status</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body" style=" overflow-y: scroll;scrollbar-width: thin; height: 300px;">
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th scope="col">Ticket_Id</th>
+                          <th scope="col">Title</th>
+                          <th scope="col">Status</th>
+                          <th scope="col">Action</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {{#each tickets}}
+                        <tr>
+                          <th scope="row">{{this._id}}</th>
+                          <td>{{this.title}}</td>
+                          {{#if this.status}}
+                          <td>Resolved</td>
+                          {{else}}
                           <td>Progress</td>
-                         {{/if}}
-                       
-                        <td>
-                          <form method="POST" action="/dshbrd/{{this._id}}?hemant=delete">
-                             <button type="submit" class="btn btn-primary">Remove</button>
-                          </form>
-                        </td>
-                      </tr>
-                      {{/each}}
-                    </tbody>
-                  </table>
+                          {{/if}}
 
+                          <td>
+                            <form method="POST" action="/dshbrd/{{this._id}}?hemant=delete">
+                              <button type="submit" class="btn btn-primary">Remove</button>
+                            </form>
+                          </td>
+                        </tr>
+                        {{/each}}
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
-
-
-
-
               </div>
             </div>
-
           </div>
         </div>
-
-
       </div>
     </div>
-
   </div>
+</div>
+</div>
+</div>
+<div class="container"><h4>
+  ATTENDENCE
+</h4></div>
+ 
+<div class="container" style="overflow-y: scroll;scrollbar-width: thin; height: 104px; ">
+ <table class="table table-striped" id="myTable">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Class</th>
+        <th>Roll No</th>
+        <th>Student id</th>
+        <th>Jan</th>
+        <th>Fab</th>
+        <th>March</th>
+        <th>April</th>
+        <th>May</th>
+        <th>June</th>
+        <th>July</th>
+        <th>Aug</th>
+        <th>Sept</th>
+        <th>Oct</th>
+        <th>Nov</th>
+        <th>Dec</th>
+
+
+
+      </tr>
+    </thead>
+
+    <tbody>
+      {{#each student_attandance_dashbrd_data}}
+      <tr>
+        <td>{{this.name}}</td>
+        <td>{{this.class}}</td>
+        <td>{{this.roll_no}}</td>
+        <td>{{this.student_id}}</td>
+        <td>{{this.jan}}</td>
+        <td>{{this.feb}}</td>
+        <td>{{this.march}}</td>
+        <td>{{this.april}}</td>
+        <td>{{this.may}}</td>
+        <td>{{this.june}}</td>
+        <td>{{this.july}}</td>
+        <td>{{this.aug}}</td>
+        <td>{{this.sept}}</td>
+        <td>{{this.oct}}</td>
+        <td>{{this.nov}}</td>
+        <td>{{this.dec}}</td>
+      </tr>
+      {{/each}}
+
+      </tr>
+
+    </tbody>
+  </table>
+</div>
+</tbody>
+</table>
+</div>
+
+</div>
